# configurator-server

./: .dockerignore  .env.template  .gitignore  Dockerfile  app.py  docker-compose-build.yaml  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt  settings.json  settings.schema.json
.devcontainer/: devcontainer.json  docker-compose.yml
static/: asset-manifest.json  precache-manifest.3c30867ab52c55ddafa0ea7f03bd5ee0.js  precache-manifest.65b514d4df57b96842b33bb85b0433ae.js  precache-manifest.fbb5c4074cdd9ab33f5ff59c157e2167.js  service-worker.js
static/css/: main.3e75f1c9.chunk.css  main.3e75f1c9.chunk.css.map
static/js/: 2.518a9f7d.chunk.js  2.518a9f7d.chunk.js.map  2.d8d518d1.chunk.js  2.d8d518d1.chunk.js.map  main.0f37e0ff.chunk.js  main.0f37e0ff.chunk.js.map  main.4409a89a.chunk.js  main.4409a89a.chunk.js.map  main.a7cfe0af.chunk.js  main.a7cfe0af.chunk.js.map
templates/: index.html
